2009-03-25  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/memory.c: (start_board), (memory_next_level): fixed a cased in which
	  the memory sound was in a fuzzy state if the level was changed by the user.

2009-03-24  Bruno coudoin  <bruno.coudoin@free.fr>

	- Replaced a level in memory sound to make the difficulty always increasing

	* src/boards/memory.c: (start_board):
	* boards/voices/*: normalized sounds.

2009-03-20  Bruno coudoin  <bruno.coudoin@free.fr>

	- Reverted a commit in which Bruno broke the saving of the content.txt
	  file.

	* src/gcompris/gc_net.c: (gc_cache_init), (gc_cache_get_relative),
	(gc_cache_add), (gc_cache_import_pixmap), (gc_cache_remove),
	(_table_foreach), (gc_cache_save), (gc_cache_destroy):

2009-03-17  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a little issue. It was possible for the user in
	  memory sound against tux to click on as many card she wants
	  if she does not wait for the end of the sound.

	* src/boards/memory.c: (memory_next_level), (check_win),
	(item_event):

2009-03-15  Bruno Coudoin  <bruno.coudoin@free.fr>

	- Replaced letter that differenciate blocks for
	  color blinds by ASCII symbols that are locale
	  agnostic.

	* src/boards/hanoi.c: (hanoi_create_item):

2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed an annoying bug in the locale selection.
	  Punjabi was twice in our internal list which makes
	  it impossible to access locale after Portuguese in
	  our list. It was possible to access locale by going
	  backward but really annoying.

	* src/gcompris/config.c:

2009-03-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a crash case by Miguel in the configuration.
	  in a languge setting configuration of an activity
	  if we change the language, gcompris crashes.

	* src/gcompris/board_config_combo.c:
	(gc_board_config_combo_locales_asset):

	*** RELEASE 8.4.11 ***

2009-03-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Patch from Miguel that fixes the configuration